// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/kustomize/extract extractPackageFile() extracts from digest 1`] = `
{
  "deps": [
    {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": undefined,
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": "11",
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": 11,
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-dependency-specification",
    },
    {
      "currentValue": 2641143766,
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-value",
    },
    {
      "currentValue": "b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-value",
    },
  ],
}
`;

exports[`modules/manager/kustomize/extract extractPackageFile() extracts from newTag 1`] = `
{
  "deps": [
    {
      "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
      "currentDigest": undefined,
      "currentValue": "11",
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "11",
    },
    {
      "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": "11",
      "datasource": "docker",
      "depName": "postgres",
      "depType": "Kustomization",
      "replaceString": "11@sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    {
      "currentValue": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "depName": "postgres",
      "depType": "Kustomization",
      "skipReason": "invalid-value",
    },
  ],
}
`;

exports[`modules/manager/kustomize/extract extractPackageFile() extracts http dependency 1`] = `
[
  {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "user/repo",
    "depType": "Kustomization",
  },
  {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Kustomization",
  },
]
`;

exports[`modules/manager/kustomize/extract extractPackageFile() extracts multiple image lines 1`] = `
[
  {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
    "packageName": "https://moredhel/remote-kustomize.git",
  },
  {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
    "packageName": "https://moredhel/remote-kustomize.git",
  },
]
`;

exports[`modules/manager/kustomize/extract extractPackageFile() extracts newName 1`] = `
{
  "deps": [
    {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": "11",
      "datasource": "docker",
      "depName": "awesome/postgres",
      "depType": "Kustomization",
      "replaceString": "awesome/postgres:11@sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
    {
      "currentDigest": undefined,
      "currentValue": "11",
      "datasource": "docker",
      "depName": "awesome/postgres",
      "depType": "Kustomization",
      "replaceString": "awesome/postgres:11",
    },
    {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "currentValue": undefined,
      "datasource": "docker",
      "depName": "awesome/postgres",
      "depType": "Kustomization",
      "replaceString": "awesome/postgres@sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
    },
  ],
}
`;

exports[`modules/manager/kustomize/extract extractPackageFile() extracts ssh dependency 1`] = `
[
  {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
  },
]
`;

exports[`modules/manager/kustomize/extract extractPackageFile() extracts ssh dependency with a subdir 1`] = `
[
  {
    "currentValue": "v2.0.0",
    "datasource": "github-tags",
    "depName": "kubernetes-sigs/kustomize",
    "depType": "Kustomization",
  },
]
`;

exports[`modules/manager/kustomize/extract extractPackageFile() parses helmChart field 1`] = `
{
  "deps": [
    {
      "currentValue": "3.1.3",
      "datasource": "helm",
      "depName": "minecraft",
      "depType": "HelmChart",
      "registryUrls": [
        "https://itzg.github.io/minecraft-server-charts",
      ],
    },
    {
      "currentDigest": undefined,
      "currentValue": "18.12.1",
      "datasource": "docker",
      "depName": "redis",
      "depType": "HelmChart",
      "packageName": "registry-1.docker.io/bitnamicharts/redis",
      "pinDigests": false,
    },
  ],
}
`;

exports[`modules/manager/kustomize/extract extractPackageFile() should extract bases resources and components from their respective blocks 1`] = `
[
  {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
    "depType": "Kustomization",
  },
  {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Kustomization",
  },
  {
    "currentValue": "1.18.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Kustomization",
  },
]
`;

exports[`modules/manager/kustomize/extract extractPackageFile() should extract dependencies when kind is Component 1`] = `
[
  {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Component",
  },
  {
    "currentValue": "1.18.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
    "depType": "Component",
  },
  {
    "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v0.1.0",
    "datasource": "docker",
    "depName": "node",
    "depType": "Component",
    "replaceString": "v0.1.0",
  },
]
`;

exports[`modules/manager/kustomize/extract extractPackageFile() should extract out image versions 1`] = `
[
  {
    "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v0.1.0",
    "datasource": "docker",
    "depName": "node",
    "depType": "Kustomization",
    "replaceString": "v0.1.0",
  },
  {
    "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v0.0.1",
    "datasource": "docker",
    "depName": "group/instance",
    "depType": "Kustomization",
    "replaceString": "v0.0.1",
  },
  {
    "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v0.0.2",
    "datasource": "docker",
    "depName": "quay.io/test/repo",
    "depType": "Kustomization",
    "replaceString": "v0.0.2",
  },
  {
    "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v0.0.3",
    "datasource": "docker",
    "depName": "gitlab.com/org/suborg/image",
    "depType": "Kustomization",
    "replaceString": "v0.0.3",
  },
  {
    "autoReplaceStringTemplate": "{{newValue}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v0.0.4",
    "datasource": "docker",
    "depName": "but.this.lives.on.local/private-registry",
    "depType": "Kustomization",
    "replaceString": "v0.0.4",
  },
  {
    "currentValue": 2.5,
    "depName": "nginx",
    "depType": "Kustomization",
    "skipReason": "invalid-value",
  },
]
`;
